--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native/metro-config": "^0.76.5",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "expo": "~52.0.18",
+    "expo-cli": "^6.3.12",
     "expo-file-system": "~18.0.5",
+    "expo-modules-core": "~2.1.2",
     "expo-status-bar": "~2.0.0",
     "iconsax-react-native": "^0.0.8",
     "prop-types": "^15.8.1",
@@ -34,13 +37,16 @@
     "react-native-svg": "^15.10.1",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native/typescript-config": "^0.76.5",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.2"
   },
   "private": true
 }
