--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native/metro-config": "^0.76.5",
     "@react-navigation/bottom-tabs": "^7.2.0",
