--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "^15.10.1",
     "react-native-svg-transformer": "^1.5.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^9.2.0",
@@ -50,6 +50,7 @@
     "@react-native/typescript-config": "^0.76.5",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
+    "react-native-reanimated": "^3.16.6",
     "typescript": "^5.7.2"
   },
   "private": true
