--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "expo": "~52.0.18",
     "expo-cli": "^6.3.12",
     "expo-file-system": "~18.0.5",
+    "expo-linking": "^7.0.4",
     "expo-modules-core": "~2.1.2",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~2.0.0",
     "iconsax-react-native": "^0.0.8",
     "prop-types": "^15.8.1",
@@ -34,6 +36,7 @@
     "react-native": "0.76.5",
     "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "^6.6.1",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
